[package]
name = "api_perf_test"
version = "1.0.0"
edition = "2021"
authors = ["API Performance Tester"]
description = "Modular API Performance Testing Tool - measures TPS, response time, with CSV export"

[[bin]]
name = "api_perf_test"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV writing
csv = "1.3"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Statistics
statrs = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
